changes to some pages

--- a/index.html
+++ b/index.html
@@ -41,15 +41,27 @@
                         Other Links
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="./pages/sureStep/sureStep.html">Other Products</a>
+                        <a class="dropdown-item" href="./pages/sureStep/sureStep.html">Sure-Step</a>
                         <a class="dropdown-item" href="./pages/partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
-                        <a class="dropdown-item" href="./pages/warranty/warranty.html">Warranty</a>
+                        <a class="dropdown-item" onclick="warranty()">Warranty</a>
                         <a class="dropdown-item" href="./pages/testimonialFeedback/testimonialFeedback.html">Testimonials and Feedback</a>
                     </div>
                 </li>
             </ul>
         </div>
     </nav>
+
+    <!--Warranty Pop-up-->
+    <div id="surround" onclick="surround()">
+        <div id="warranty">
+            <h2>Warranty</h2>
+            <div id="warrantyText">
+                E-Z Docking Solutions LLC warranties all E-Z Docking Solutions brand docks purchased new by the original owner to be free from defects in the aluminum structure and welds for a period of 15 years. E-Z Docking Solutions LLC will at its option, repair or replace, without charge, or allow credit for any such goods found on examination by E-Z Docking Solutions to be defective under normal use and service, provided E-Z Docking Solutions is promptly notified in writing upon discovery of such defects. The buyers remedies with respect to defective goods shall be exclusively limited as provided above, and in no event shall E-Z Docking Solutions be liable for incidental or consequential damages of any nature. All repair work must be done by E-Z Docking Solutions. This warranty does not cover damage caused by improper use, installation, removal, overloading accident, neglect or harmful alterations or repairs made by others, damage by snow or ice, fallen trees, boat collisions, electrolysis, severe weather conditions, acts of war, and all acts of God.
+            </div>
+            <h3>E-Z Docking Solutions, LLC</h3>
+        </div>
+    </div>
+    
 
     <!--Main Content-->
     <div id="mainContent">
