--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -70,7 +70,7 @@
         <div id="welcome">
 
             <div id="imageHolder">
-                <img src="../../img/Twin_Tamarack.jpg" alt="Background for the Main Dock Image">
+                <img src="../../img/Shore.jpg" alt="Background for the Main Dock Image">
             </div>
 
             <div id="welcomeText">
