--- a/pages/sureStep/sureStep.html
+++ b/pages/sureStep/sureStep.html
@@ -57,16 +57,15 @@
         <div id="headerContent">
             <div>
                 <p><strong>Check out our NEW Kayak Launch Dock in Other Products!!!</strong></p>
-
                 <p><span>(603) 942-7355</span></p>
             </div>
         </div>
 
         <div>
             <div class="">
-                <p class=""><span><span class="">E-Z Docking Solutions LLC</span></span><br>
+                <p><span><span>E-Z Docking Solutions LLC</span></span><br>
 
-                    <span class="adr"><span class="street-address">1548 First NH Turnpike</span><br>
+                    <span><span class="street">1548 First NH Turnpike</span><br>
                         <span class="locality">Northwood,</span>
                         <span class="region">NH</span>
                         <span class="postal-code">03261</span>
@@ -81,28 +80,12 @@
         </div>
 
         <div id="wrapper" class="navpos_east">
-            <div xmlns="" id="navigation" class="tglsty_arrow sub_dynamic">
-                <ul id="mainNav" role="navigation">
-                    <li class="mainNav "><a href="/home">Home</a></li>
-                    <li class="mainNav "><a href="/dock_packages_and_pricing">Dock Packages and Pricing</a></li>
-                    <li class="mainNav "><a href="/swim_floats">Swim Floats</a></li>
-                    <li class="mainNav "><a href="/other_products">Other Products</a></li>
-                    <li class="mainNav active"><a href="/sure-step">Sure-Step</a></li>
-                    <li class="mainNav "><a href="/dock_parts_and_accessories">Dock Parts and Accessories</a></li>
-                    <li class="mainNav "><a href="/warranty">Warranty</a></li>
-                    <li class="mainNav "><a href="/photo_gallery">Photo Gallery</a></li>
-                    <li class="mainNav "><a href="/testimonials_and_feedback">Testimonials and Feedback</a></li>
-                    <li class="mainNav "><a href="/contact_us">Contact Us</a></li>
-                </ul>
-            </div>
+
             <div xmlns="" id="bd">
-                <div id="pageName">
-                    <div id="pageNameContent" class="editorWrap">
-                        <div id="pageNameZoneContent" class="editable rte flexContent" rel="itemGuid.pgName.pageGuid.57a4e9e281f565.69153140">
-                            <h2 style="text-align: center;">Sure-Step</h2>
-                        </div>
-                    </div>
-                </div>
+
+                <h2 style="text-align: center;">Sure-Step</h2>
+
+
                 <div id="zWrap">
                     <div id="zA">
                         <div id="zA-widget-layout-wrap" class="widget-layout-wrap " rel="">
@@ -138,14 +121,7 @@
         </div>
         <div xmlns="" id="ft">
             <div id="fWrapper">
-                <div id="fContent">
-                    <div id="footerContent" class="editorWrap">
-                        <div id="footerZoneElement" class="editable rte flexContent" rel="itemGuid.sit.fc.001">
-                            <p>Copyright 2016 E-Z Docking Solutions LLC. All rights reserved.</p>
 
-                        </div>
-                    </div>
-                </div>
                 <!--Footer-->
                 <div id="footer">
                     <div class="card" style="width: 18rem; border: none; background-color: rgb(235, 235, 235)">
