--- a/pages/otherProducts/otherProducts.html
+++ b/pages/otherProducts/otherProducts.html
@@ -58,8 +58,8 @@
 
         <div id="headerContent">
             <div>
-                <p><strong>(603) 942-7355</strong></p>
-                <p><span>Check out our NEW Kayak Launch Dock in Other Products!!!</span></p>
+                <p><strong>Check out our NEW Kayak Launch Dock in Other Products!!!</strong></p>
+                <p><span>(603) 942-7355</span></p>
             </div>
         </div>
 
