--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
                         Other Links
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="./pages/sureStep/sureStep.html">Sure-Step</a>
-                        <a class="dropdown-item" href="./pages/partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
-                        <a class="dropdown-item" onclick="warranty()">Warranty</a>
-                        <a class="dropdown-item" href="./pages/testimonialFeedback/testimonialFeedback.html">Testimonials and Feedback</a>
+                        <a class="dropdown-item" href="../../pages/otherProducts/otherProducts.html">Other Products</a>
+                        <a class="dropdown-item" href="../../pages/sureStep/sureStep.html">Sure Steps</a>
+                        <a class="dropdown-item" href="../../pages/partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
+                        <a class="dropdown-item" href="../../pages/warranty/warranty.html">Warranty</a>
+                        <a class="dropdown-item" href="/pages/testimonialFeedback../../testimonialFeedback.html">Testimonials and Feedback</a>
                     </div>
                 </li>
             </ul>
@@ -61,7 +62,7 @@
             <h3>E-Z Docking Solutions, LLC</h3>
         </div>
     </div>
-    
+
 
     <!--Main Content-->
     <div id="mainContent">
