--- a/pages/partsAcessories/partsAccessories.html
+++ b/pages/partsAcessories/partsAccessories.html
@@ -43,7 +43,8 @@
                         Other Links
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="../../pages/sureStep/sureStep.html">Other Products</a>
+                        <a class="dropdown-item" href="../../pages/otherProducts/otherProducts.html">Other Products</a>
+                        <a class="dropdown-item" href="../../pages/sureStep/sureStep.html">Sure Steps</a>
                         <a class="dropdown-item" href="../../pages/partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
                         <a class="dropdown-item" href="../../pages/warranty/warranty.html">Warranty</a>
                         <a class="dropdown-item" href="/pages/testimonialFeedback../../testimonialFeedback.html">Testimonials and Feedback</a>
