fixing some pages

--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -42,10 +42,9 @@
                         Other Links
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="../../pages/otherProducts/otherProducts.html">Other Products</a>
-                        <a class="dropdown-item" href="../../pages/sureStep/sureStep.html">Sure Steps</a>
+                        <a class="dropdown-item" href="../../pages/sureStep/sureStep.html">Sure-Step</a>
                         <a class="dropdown-item" href="../../pages/partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
-                        <a class="dropdown-item" href="../../pages/warranty/warranty.html">Warranty</a>
+                        <a class="dropdown-item" onclick="warranty()">Warranty</a>
                         <a class="dropdown-item" href="/pages/testimonialFeedback../../testimonialFeedback.html">Testimonials and Feedback</a>
                     </div>
                 </li>
@@ -82,8 +81,7 @@
             <div id="intro" style="text-align: center;">
                 <h2>Contact Us</h2>
                 <div style="display: flex; flex-wrap: wrap;width: 100%;justify-content: space-around;">
-                    <h3>Questions?</h3>
-                    <h3>Comments?</h3>
+                    <h3>Questions?</h3><h3>Comments?</h3>
                 </div>
                 <p>Submit the form below and we will get back to you soon!</p>
             </div>
@@ -133,9 +131,7 @@
                     </div>
                 </div>
                 <div style="display: grid;text-align: center;">
-                    <label for="comment">
-                        <h1>Comment:</h1>
-                    </label>
+                    <label for="comment"><h1>Comment:</h1></label>
                     <textarea id="comment" name="comment" cols="30" rows="10" required="true"></textarea>
                 </div>
                 <div style="display:flex;flex-wrap: wrap;justify-content: space-evenly;align-items: center;">
