--- a/pages/price/price.html
+++ b/pages/price/price.html
@@ -42,10 +42,9 @@
                         Other Links
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="../../pages/otherProducts/otherProducts.html">Other Products</a>
-                        <a class="dropdown-item" href="../../pages/sureStep/sureStep.html">Sure Steps</a>
+                        <a class="dropdown-item" href="../../pages/sureStep/sureStep.html">Sure-Step</a>
                         <a class="dropdown-item" href="../../pages/partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
-                        <a class="dropdown-item" href="../../pages/warranty/warranty.html">Warranty</a>
+                        <a class="dropdown-item" onclick="warranty()">Warranty</a>
                         <a class="dropdown-item" href="/pages/testimonialFeedback../../testimonialFeedback.html">Testimonials and Feedback</a>
                     </div>
                 </li>
