--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -131,6 +131,15 @@
                     </div>
                 </div>
                 <div style="display: grid;text-align: center;">
+                    <div style="display: grid;justify-items: center;">
+                        <label for="topic">Topic:</label>
+                        <select id="topic" type="" name="topic" style="width: 25%;">
+                            <option value="default">Default</option>
+                            <option value="return">Returns</option>
+                            <option value="price">Pricing</option>
+                            <option value="date">Date</option>
+                        </select>
+                    </div>
                     <label for="comment"><h1>Comment:</h1></label>
                     <textarea id="comment" name="comment" cols="30" rows="10" required="true"></textarea>
                 </div>
