--- a/pages/sureStep/sureStep.html
+++ b/pages/sureStep/sureStep.html
@@ -55,104 +55,61 @@
 
     <!--Main Content-->
     <div id="mainContent">
+        <div id="header">
 
-        <div id="headerContent">
-            <div>
-                <p><strong>(603) 942-7355</strong></p>
-                <p><span>Check out our NEW Kayak Launch Dock in Other Products!!!</span></p>
+            <div id="imageHolder">
+                <img src="./img/headrer.jpeg" alt="Background for the Main Dock Image">
+            </div>
+
+            <div id="welcomeText">
+                <h1>E-Z Docking Solutions</h1>
+                <p>Check out our NEW Kayak Launch Dock in Other Products!!!</p>
             </div>
         </div>
 
-        <div>
-            <div class="">
-                <p><span><span>E-Z Docking Solutions LLC</span></span><br>
+        <div id="content">
+            <h2><strong>AVAILABLE IN GREY OR SAND</strong></h2>
 
-                    <span><span class="street">1548 First NH Turnpike</span><br>
-                        <span class="locality">Northwood,</span>
-                        <span class="region">NH</span>
-                        <span class="postal-code">03261</span>
-                    </span>
-                    <span class="phoneNumbers"><br>
-                        <span class="tel">
-                            <span class="type">ph: </span>(603) 942-7355</span>
-                    </span><br>
-                    <span class="mailtoWrapper"><a class="email" href="mailto:ezdocking@yahoo.com">ezdockin<wbr>g<wbr>@yahoo<wbr>.com</a></span>
+            <div id="contentBottom">
+
+                <img src="/pages/sureStep/img/one.jpg" alt="" id="main">
+                <p>Sure-step is one of the best decking options available today! It is lightweight, durable, wave resistant, highly UV resistant so it does not get hot, slip resistant, environmentally friendly, and barefoot friendly. It is made of 100% Virgin Polypropylene. It is very lightweight making for easy installation and removal, yet it is very rugged and rated for 350 pounds per square foot.</p>
+                <img src="http://www.nhdocks.com/nhdocks/decking_surestep_procell_001.jpg" alt="" id="extraImg">
 
             </div>
         </div>
 
-        <div id="wrapper" class="navpos_east">
-
-            <div xmlns="" id="bd">
-
-                <h2 style="text-align: center;">Sure-Step</h2>
 
 
-                <div id="zWrap">
-                    <div id="zA">
-                        <div id="zA-widget-layout-wrap" class="widget-layout-wrap " rel="">
-                            <div class="modWrap">
-                                <p style="text-align: center;" data-mce-style="text-align: center;"><img class="yssDKImg yssImg yssImgE yssAstImg_itemGuid.57a4ea2436bcd4.41663909_960X1280 yssImg_allowZoomIn yssDKImg_alignCenter" style="display: block; margin-left: auto; margin-right: auto; text-align: center;" src="/yahoo_site_admin/assets/images/0421141436.217123417_std.jpg" alt="" width="518" height="690" border="0" data-mce-src="/yahoo_site_admin/assets/images/0421141436.217123417_std.jpg" data-mce-style="display: block; margin-left: auto; margin-right: auto; text-align: center;" /><span style="line-height: normal; font-size: 24pt;" data-mce-style="line-height: normal; font-size: 24pt;"><strong>AVAILABLE IN GREY OR SAND</strong></span></p>
-                                <p style="text-align: center;" data-mce-style="text-align: center;">Sure-step is one of the best decking options available today! It is lightweight, durable, wave resistant, highly UV resistant so it does not get hot, slip resistant, environmentally friendly, and barefoot friendly. It is made of 100% Virgin Polypropylene. It is very lightweight making for easy installation and removal, yet it is very rugged and rated for 350 pounds per square foot.</p>
-                                <p style="text-align: center;" data-mce-style="text-align: center;"><a type="1" href="http://www.jimdiinc.com/products/sure_step_docks_and_walkways/default.html" data-mce-href="http://www.jimdiinc.com/products/sure_step_docks_and_walkways/default.html"><img src="http://www.nhdocks.com/nhdocks/decking_surestep_procell_001.jpg" alt="" width="217" height="208" data-mce-src="http://www.nhdocks.com/nhdocks/decking_surestep_procell_001.jpg" /></a></p>
-                                <p style="text-align: center;" data-mce-style="text-align: center;">﻿﻿</p>
-                                <p> </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="zB">
-                        <div id="zB-widget-layout-wrap" class="widget-layout-wrap " rel="">
-                            <div class="modWrap">
-                                <p> </p>
-                                <p> </p>
-                                <p> </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="zC">
-                        <div id="zC-widget-layout-wrap" class="widget-layout-wrap " rel="">
-                            <div class="modWrap">
-                                <p> </p>
-                                <p> </p>
-                                <p> </p>
-                            </div>
-                        </div>
-                    </div>
+
+        <!--Footer-->
+        <div id="footer">
+            <div class="card" style="width: 18rem; border: none; background-color: rgb(235, 235, 235)">
+                <div class="card-body">
+                    <h5 class="card-title">Copyright</h5>
+                    <p class="card-text">Copyright 2016 E-Z Docking Solutions LLC. All rights reserved.</p>
+                    <a href="http://nhdocks.com/home#:~:text=Web%20Hosting%20by%20Aabaco" class="card-link">Web Hosting by Aabaco</a>
+                </div>
+            </div>
+            <div class="card" style="width: 20rem; border: none; background-color: rgb(235, 235, 235)">
+                <div class="card-body">
+                    <h5 class="card-title">Contact</h5>
+                    <p class="card-text">ph: (603) 942-7355</p>
+                    <a href="mailto:ezdocking@yahoo.com" class="card-link">ezdocking@yahoo.com</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem; border: none; background-color: rgb(235, 235, 235)">
+                <div class="card-body">
+                    <h5 class="card-title">Address</h5>
+                    <p class="card-text">E-Z Docking Solutions LLC 1548 First NH Turnpike Northwood, NH 03261</p>
                 </div>
             </div>
         </div>
-        <div xmlns="" id="ft">
-            <div id="fWrapper">
 
-                <!--Footer-->
-                <div id="footer">
-                    <div class="card" style="width: 18rem; border: none; background-color: rgb(235, 235, 235)">
-                        <div class="card-body">
-                            <h5 class="card-title">Copyright</h5>
-                            <p class="card-text">Copyright 2016 E-Z Docking Solutions LLC. All rights reserved.</p>
-                            <a href="http://nhdocks.com/home#:~:text=Web%20Hosting%20by%20Aabaco" class="card-link">Web Hosting by Aabaco</a>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 20rem; border: none; background-color: rgb(235, 235, 235)">
-                        <div class="card-body">
-                            <h5 class="card-title">Contact</h5>
-                            <p class="card-text">ph: (603) 942-7355</p>
-                            <a href="mailto:ezdocking@yahoo.com" class="card-link">ezdocking@yahoo.com</a>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 18rem; border: none; background-color: rgb(235, 235, 235)">
-                        <div class="card-body">
-                            <h5 class="card-title">Address</h5>
-                            <p class="card-text">E-Z Docking Solutions LLC 1548 First NH Turnpike Northwood, NH 03261</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    </div>
 </body>
 
 </html>
